Added: Styles to client and server displays

--- a/html/server.html
+++ b/html/server.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>AS-TGS-SS</title>
-	<link rel="stylesheet" href="../css/styles.css">
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+    <title>Servidor miniKerberos</title>
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 <body>
-	<!-- <header style="text-align: center; font-size: 30px; font-weight: bold;">Barberia</header>
-	<div style="display:block">
-		<label for="inputFarei">Barbero: </label><strong id="barbero"></strong>
-	</div>
- -->
-	<label for="" style="color:#2196f3;font-size:22px">Clientes: </label>
-	<div style="text-align: center; margin-top: 40px;background-color: whitesmoke;" id="list-clientes">
-		
+	<div class="container">
+	<h3 class="header center blue-text">Clientes:</h3>
+		<div style="text-align: center; margin-top: 40px;background-color: whitesmoke;" id="list-clientes">
+			
+		</div>
 	</div>
 </body>
-	<script src="../js/vendor/underscore.min.js"></script>
 	<script src="../js/vendor/underscore.min.js"></script>
 	<script src="../js/user.js"></script>
 	<script src="../js/passwords.js"></script>
 	<script src="../js/criptofy.js"></script>
 	<script src="../js/jquery.js"></script>
+	<script src="../js/vendor/materialize.js"></script>
 	<script src="../js/server.js"></script>
 </html>
