--- a/html/client.html
+++ b/html/client.html
@@ -1,30 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <title>Cliente</title>
- <link rel="stylesheet" href="../css/styles.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+    <title>Cliente miniKerberos</title>
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 <body>
- <!-- <div class="option-menu">
-  <h1 id="message"></h1>
- </div>
- <div class="option-menu">
-  <a id="salir" href="#">Salir de la barberia</a>
- </div> -->
-<label>Usuario</label>
-<input type="text" name="usuario" id="usuario" placeholder="usuario" style="display:block">
-<label>password</label> 
-<input type="password" name="password" id="password" placeholder="password" style="display:block">
-<label>Servicio</label>
-<input type="text" name="servicio" id="servicio" style="display:block">
-<br>
-<a href="#" id="aceptar" style="padding: 0.7rem 1.5rem; background-color: #08963b; color:white; text-decoration:none;margin-top:1rem">Enviar</a>
-<div id="messages"><p>Mensajes:</p></div>
+<div class="container cliente" id="formCliente">
+	<h3 class="header center blue-text">Iniciar sesión</h3>
+	<form class="col s12">
+		<div class="row">
+			<div class="input-field col s6">
+          		<input id="usuario" type="text" class="validate">
+          		<label for="usuario">Usuario</label>
+        	</div>
+        	<div class="input-field col s6">
+          		<input id="password" type="password" class="validate">
+          		<label for="password">Password</label>
+        	</div>
+		</div>
+		<div class="row">
+			<div class="input-field col s12">
+				<input id="servicio" type="text" class="validate">
+          		<label for="servicio">Servicio</label>
+			</div>
+		</div>
+	</form>
+	  <button id="enviar" class="btn light-blue darken-2" type="submit" name="action">Iniciar
+    	<i class="material-icons right">send</i>
+  	</button>
+</div>
+<div class="container hide" id="messages">
+      <div class="row" style="border-bottom: 2px solid rgba(0,0,0,0.2);">
+        <div class="col s6 ">
+          <h5>Codigo</h5>
+        </div>
+        <div class="col s6">
+          <h5>clientTGS</h5>
+        </div>               
+      </div>
+      <div class="row" id="mensajes">
+
+      </div>
+</div>	
+	 <script type="text/template" id="mensajes-template"> 
+      <div class="row">
+              <div class="col s6">
+                  <h5><%= codigo %></h5>
+              </div>
+              <div class="col s6">
+                  <h5><%= clientTGS %></h5>
+              </div>
+        </div>
+    </script>
+
 </body>
-	<script src="../js/criptofy.js"></script>
-
- <script src="../js/jquery.js"></script>
-
- <script src="../js/client.js"></script>
+<script src="../js/criptofy.js"></script>
+<script src="../js/jquery.js"></script>
+<script src="../js/vendor/underscore.min.js"></script>
+<script src="../js/vendor/materialize.js"></script>
+<script src="../js/client.js"></script>
 </html>
