Fixed: Styles for server.js

--- a/html/server.html
+++ b/html/server.html
@@ -7,12 +7,12 @@
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="../css/styles.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 <body>
 	<div class="container">
 	<h3 class="header center blue-text">Clientes:</h3>
-		<div style="text-align: center; margin-top: 40px;background-color: whitesmoke;" id="list-clientes">
+		<div class="center" id="list-clientes">
 			
 		</div>
 	</div>
