--- a/html/index.html
+++ b/html/index.html
@@ -25,19 +25,18 @@
         <div class="col s12 m6">
           <div class="icon-block">
            <a href="server.html">
-            <h1 class="center  darken-1"><i class="material-icons">group</i></h1></a>
+            <h1 class="center  darken-1"><i class="material-icons" style="font-size: 60px !important;">group</i></h1></a>
             <a href="server.html"><h5 class="center">Servidor</h5></a>
           </div>
         </div>
         <div class="col s12 m6">
           <div class="icon-block">
-            <a href="client.html"><h1 class="center darken-1"><i class="material-icons">flash_on</i></h1></a>
+            <a href="client.html"><h1 class="center darken-1"><i class="material-icons" style="font-size: 60px !important;">flash_on</i></h1></a>
             <a href="client.html"><h5 class="center darken-2">Cliente</h5>
           </div>
         </div>
       </div>
     </div>
-    <div class="section"></div>
   </div>
   <!--  Scripts-->
   <script src="../js/vendor/materialize.js"></script>
