--- a/html/client.html
+++ b/html/client.html
@@ -34,19 +34,47 @@
     	<i class="material-icons right">send</i>
   	</button>
 </div>
-<div class="container hide" id="messages">
-      <div class="row" style="border-bottom: 2px solid rgba(0,0,0,0.2);">
-        <div class="col s6 ">
-          <h5>Codigo</h5>
+<div class="container hide" id="container">
+  <h4 class="header center blue-text">Conectado:</h4>
+  <div id="server">
+      <div class="row border">
+        <div class="col s6">
+          <h6>IP</h6>
         </div>
         <div class="col s6">
-          <h5>clientTGS</h5>
-        </div>               
+          <h6>Mensaje</h6>
+        </div>
       </div>
+  </div>
+  <h4 class="header center blue-text">Mensajes:</h4>
+  <div class="center" id="messages">
+    <div class="row border">
+      <div class="col s4">
+        <h6>Estado</h6>
+      </div>
+      <div class="col s4">
+        <h6>Mensaje</h6>
+      </div>
+      <div class="col s4">
+        <h6>Propiedades</h6>
+      </div>
+    </div>
+  </div>
       <div class="row" id="mensajes">
 
       </div>
+  
 </div>	
+  <script type="text/template" id="server-template"> 
+      <div class="row">
+              <div class="col s6">
+                  <h5><%= IP %></h5>
+              </div>
+              <div class="col s6">
+                  <h5><%= Mensaje %></h5>
+              </div>
+        </div>
+    </script>
 	 <script type="text/template" id="mensajes-template"> 
       <div class="row">
               <div class="col s6">
@@ -54,6 +82,26 @@
               </div>
               <div class="col s6">
                   <h5><%= clientTGS %></h5>
+              </div>
+        </div>
+    </script>
+    <script type="text/template" id="messages-template"> 
+      <div class="row no-border">
+            <div class="col s4">
+                  <h6><%= Estado %></h6>
+              </div>
+              <div class="col s4">
+                  <h6><%= Mensaje %></h6>
+              </div>
+              <div class="col s4">
+                  <ul>
+                    <li><%= hash %></li>
+                    <li><%= clientTGS %></li>
+                    <li><%= pass_serv %></li>
+                    <li><%= tiempo %></li>
+                    <li><%= servicio %></li>
+                    <li><%= decrypt %></li>
+                  </ul>
               </div>
         </div>
     </script>
