--- a/html/server.html
+++ b/html/server.html
@@ -11,11 +11,95 @@
 </head>
 <body>
 	<div class="container">
-	<h3 class="header center blue-text">Clientes:</h3>
+	<h4 class="header center blue-text">Clientes:</h4>
+		<div class="container center" id="client-connected">
+			<div class="row border">
+				<div class="col s6">
+					<h6>IP</h6>
+				</div>
+				<div class="col s6">
+					<h6>Mensaje</h6>
+				</div>
+			</div>
+		</div>
+	<div class="center" id="tgs-key">
+		<div class="row border">
+			<h6>TGS KEY</h6>
+		</div>
+	</div>	
+	<h4 class="header center blue-text">Mensajes:</h4>
+	<div class="center" id="usuario-msg">
+		<div class="row border">
+			<div class="col s6">
+				<h6>Usuario</h6>
+			</div>
+			<div class="col s6">
+				<h6>Mensaje</h6>
+			</div>
+		</div>
+		
+	</div>
+	<div class="center" id="messages">
+		<div class="row border">
+			<div class="col s4">
+				<h6>Estado</h6>
+			</div>
+			<div class="col s4">
+				<h6>Mensaje</h6>
+			</div>
+			<div class="col s4">
+				<h6>Propiedades</h6>
+			</div>
+		</div>
+	</div>
 		<div class="center" id="list-clientes">
 			
 		</div>
 	</div>
+	<script type="text/template" id="client-connected-template"> 
+      <div class="row">
+              <div class="col s6">
+                  <h6><%= IP %></h6>
+              </div>
+              <div class="col s6">
+                  <h6><%= MSJ %></h6>
+              </div>
+        </div>
+    </script>
+    <script type="text/template" id="tgs-key-template"> 
+      <div class="row">
+           <h6><%= TGSKEY %></h6>
+        </div>
+    </script>
+    <script type="text/template" id="usuario-msg-template"> 
+      <div class="row">
+              <div class="col s6">
+                  <h6><%= Usuario %></h6>
+              </div>
+              <div class="col s6">
+                  <h6><%= Mensaje %></h6>
+              </div>
+        </div>
+    </script>
+    <script type="text/template" id="messages-template"> 
+      <div class="row no-border">
+      		  <div class="col s4">
+                  <h6><%= Estado %></h6>
+              </div>
+              <div class="col s4">
+                  <h6><%= Mensaje %></h6>
+              </div>
+              <div class="col s4">
+                  <ul>
+                  	<li><%= hash %></li>
+                  	<li><%= clientTGS %></li>
+                  	<li><%= pass_serv %></li>
+                  	<li><%= tiempo %></li>
+                  	<li><%= servicio %></li>
+                  </ul>
+              </div>
+        </div>
+    </script>
 </body>
 	<script src="../js/vendor/underscore.min.js"></script>
 	<script src="../js/user.js"></script>
