--- a/html/client.html
+++ b/html/client.html
@@ -46,6 +46,13 @@
         </div>
       </div>
   </div>
+  <div class="center" id="hash-gen-client">
+    <div class="row border">
+      <div class="col s12">
+        <h6>HASH Generado</h6>
+      </div>
+    </div>
+  </div>  
   <h4 class="header center blue-text">Mensajes:</h4>
   <div class="center" id="messages">
     <div class="row border">
@@ -75,6 +82,13 @@
               </div>
         </div>
     </script>
+    <script type="text/template" id="hash-gen-template"> 
+      <div class="row">
+        <div class="col s12">
+          <h6><%= HASH %></h6>
+        </div>
+      </div>
+    </script>
 	 <script type="text/template" id="mensajes-template"> 
       <div class="row">
               <div class="col s6">
@@ -95,7 +109,6 @@
               </div>
               <div class="col s4">
                   <ul>
-                    <li><%= hash %></li>
                     <li><%= clientTGS %></li>
                     <li><%= pass_serv %></li>
                     <li><%= tiempo %></li>
