--- a/html/server.html
+++ b/html/server.html
@@ -24,7 +24,12 @@
 		</div>
 	<div class="center" id="tgs-key">
 		<div class="row border">
-			<h6>TGS KEY</h6>
+			<div class="col s6">
+				<h6>TGS KEY</h6>	
+			</div>
+			<div class="col s6">
+				<h6>HASH Generado</h6>
+			</div>
 		</div>
 	</div>	
 	<h4 class="header center blue-text">Mensajes:</h4>
@@ -68,8 +73,13 @@
     </script>
     <script type="text/template" id="tgs-key-template"> 
       <div class="row">
+      	<div class="col s6">
            <h6><%= TGSKEY %></h6>
         </div>
+        <div class="col s6" id="hash-gen">
+        	<h6><%= HASH %></h6>
+        </div>
+      </div>
     </script>
     <script type="text/template" id="usuario-msg-template"> 
       <div class="row">
@@ -91,7 +101,6 @@
               </div>
               <div class="col s4">
                   <ul>
-                  	<li><%= hash %></li>
                   	<li><%= clientTGS %></li>
                   	<li><%= pass_serv %></li>
                   	<li><%= tiempo %></li>
